# spicerack

./: CMakeLists.txt  README.md  andgate.c  andgate.h  clock.c  clock.h  counter.c  counter.h  main.c  output.c  output.h  signal.c  signal.h  signalset.c  signalset.h  signalvalue.c  signalvalue.h  spicerack-config.cmake  spicerack.c  spicerack.h  watcher.c  watcher.h
